Bug 1317724 - Add nsIURIWithQuery declarations. r=mkmelin,rkent CLOSED TREE DONTBUILD